--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <nav>
+        <ul>
+            <li>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Event</a>
+                <a href="#">Page</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
