--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,31 @@
     <link rel="stylesheet" href="../pages/about.html">
 </head>
 <body>
-    <h1>Here is me</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo accusantium optio vitae, similique maiores eum, illum dignissimos doloribus neque animi voluptatum quasi iusto distinctio ipsam, facere quibusdam. Sed, consequatur nesciunt.</p>
+
+    <!-- navbar -->
+   
+    <nav>
+
+        <div class="logo">
+            <img src="" alt="">
+        </div>
+
+        <div class="list">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Pages</a></li>
+            </ul>
+        </div>
+
+        <div class="btn">
+            <span class="login">Login</span>
+            <span class="contact"></span>
+        </div>
+
+    </nav>
+
+    <!-- end navbar -->
+
 </body>
 </html>
