--- a/pages/about.html
+++ b/pages/about.html
@@ -33,5 +33,13 @@
 
     <!-- end navbar -->
 
+    <!-- banner -->
+
+    <div class="banner">
+        <h1>About Smallword Smallband</h1>
+    </div>
+
+    <!-- end banner -->
+
 </body>
 </html>
