--- a/index.html
+++ b/index.html
@@ -7,14 +7,27 @@
 </head>
 <body>
     <nav>
+        <div class="nav-logo">
+            <!-- <img src="images/music.png" alt=""> -->
+        </div>
         <ul>
-            <li>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Event</a>
-                <a href="#">Page</a>
+            <li class="home"><a href="index.html">Home</a></li>
+            <li><a href="code/about.html">About</a></li>
+            <li><a href="code/service.html">Service</a></li>
+            <li class="nav-item dropdown">
+                <a href="#">Pages</a>
+                <ul class="dropdown-content">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="code/about.html">About</a></li>
+                    <li><a href="code/song.html">Song</a></li>
+                    <li><a href="code/service.html">Service</a></li>
+                </ul>
             </li>
         </ul>
+        <div class="button">
+            <button class="btn btn1 "><a href="">Login</a></button>
+            <button class="btn btn4"><a href="code/contact.html">Contact</a></button>
+        </div>
     </nav>
 </body>
 </html>
