--- a/pages/about.html
+++ b/pages/about.html
@@ -11,24 +11,28 @@
     <!-- navbar -->
    
     <nav>
-
-        <div class="logo">
-            <img src="" alt="">
+        <div class="nav-logo">
+            <img src="images/image.png" alt="">
         </div>
-
-        <div class="list">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Pages</a></li>
-            </ul>
+        <ul>
+            <li class="home"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Service</a></li>
+            <li class="nav-item dropdown">
+                <a href="#">Pages</a>
+                <ul class="dropdown-content">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Song</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </li>
+        </ul>
+        <div class="button">
+            <button class="btn btn1 "><a href="#">Login</a></button>
+            <button class="btn btn4"><a href="#">Contact</a></button>
         </div>
-
-        <div class="btn">
-            <span class="login">Login</span>
-            <span class="contact"></span>
-        </div>
-
     </nav>
 
     <!-- end navbar -->
