--- a/pages/about.html
+++ b/pages/about.html
@@ -34,6 +34,7 @@
             <button class="btn btn4"><a href="#">Contact</a></button>
         </div>
     </nav>
+    <h1>gfytftydtydj</h1>
 
     <!-- end navbar -->
 
