--- a/pages/about.html
+++ b/pages/about.html
@@ -34,7 +34,7 @@
             <button class="btn btn4"><a href="#">Contact</a></button>
         </div>
     </nav>
-    <h1>gfytftydtydj</h1>
+
 
     <!-- end navbar -->
 
@@ -45,6 +45,20 @@
     </div>
 
     <!-- end banner -->
+
+    <!-- about us -->
+
+    <div class="about">
+
+        <div class="left">
+            <img src="" alt="">
+        </div>
+
+        <div class="right">
+            <h2>Smallword Smallband</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac tempor quam. Aliquam erat volutpat. Donec ut efficitur neque. Nulla facilisi. Donec vel velit vel neque efficitur consectetur. Donec vel velit vel neque efficitur consectetur. Donec vel velit vel neque efficitur consectetur. Donec vel velit vel neque efficitur consectetur. Donec vel velit vel neque efficitur consectetur.</p>
+        </div>
+    </div>
 
 </body>
 </html>
