--- a/pages/about.html
+++ b/pages/about.html
@@ -55,8 +55,32 @@
         </div>
 
         <div class="right">
-            <h2>Smallword Smallband</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac tempor quam. Aliquam erat volutpat. Donec ut efficitur neque. Nulla facilisi. Donec vel velit vel neque efficitur consectetur. Donec vel velit vel neque efficitur consectetur. Donec vel velit vel neque efficitur consectetur. Donec vel velit vel neque efficitur consectetur. Donec vel velit vel neque efficitur consectetur.</p>
+            <h2>About Us</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Sed ac tempor quam. Aliquam erat volutpat. Donec ut efficitur neque. 
+                Nulla facilisi. Donec vel velit vel neque efficitur consectetur. Donec 
+                vel velit vel neque efficitur consectetur. Donec vel velit vel neque efficitur consectetur. 
+                Donec vel velit vel neque efficitur consectetur. Donec vel velit vel neque efficitur consectetur.
+            </p>
+        </div>
+    </div>
+
+    <!-- end about us -->
+
+    <!-- album -->
+
+    <div class="album">
+
+        <div class="album-left">
+            <img src="" alt="">
+        </div>
+
+        <div class="album-right">
+            <div class="audo">
+                <p>good time</p>
+                <audio src=""></audio>
+            </div>
         </div>
     </div>
 
