--- a/index.html
+++ b/index.html
@@ -1,33 +1,44 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title><link rel="stylesheet" href="">
+    <title>Home</title>
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <nav>
         <div class="nav-logo">
-            <!-- <img src="images/music.png" alt=""> -->
+            <img src="images/image.png" alt="">
         </div>
         <ul>
-            <li class="home"><a href="index.html">Home</a></li>
-            <li><a href="code/about.html">About</a></li>
-            <li><a href="code/service.html">Service</a></li>
+            <li class="home"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Service</a></li>
             <li class="nav-item dropdown">
                 <a href="#">Pages</a>
                 <ul class="dropdown-content">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="code/about.html">About</a></li>
-                    <li><a href="code/song.html">Song</a></li>
-                    <li><a href="code/service.html">Service</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Song</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </li>
         </ul>
         <div class="button">
-            <button class="btn btn1 "><a href="">Login</a></button>
-            <button class="btn btn4"><a href="code/contact.html">Contact</a></button>
+            <button class="btn btn1 "><a href="#">Login</a></button>
+            <button class="btn btn4"><a href="#">Contact</a></button>
         </div>
     </nav>
+    <div class="bg-banner">
+        <div class="shape">
+        </div>
+        <div class="animated-text">
+            <span></span>
+        </div>
+    </div>
+    <div class="container">
+    </div>
 </body>
 </html>
