--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,82 @@
     <link rel="stylesheet" href="../pages/about.html">
 </head>
 <body>
-    <h1>Here is me</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo accusantium optio vitae, similique maiores eum, illum dignissimos doloribus neque animi voluptatum quasi iusto distinctio ipsam, facere quibusdam. Sed, consequatur nesciunt.</p>
+
+    <!-- navbar -->
+   
+    <nav>
+        <div class="nav-logo">
+            <img src="images/image.png" alt="">
+        </div>
+        <ul>
+            <li class="home"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Service</a></li>
+            <li class="nav-item dropdown">
+                <a href="#">Pages</a>
+                <ul class="dropdown-content">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Song</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </li>
+        </ul>
+        <div class="button">
+            <button class="btn btn1 "><a href="#">Login</a></button>
+            <button class="btn btn4"><a href="#">Contact</a></button>
+        </div>
+    </nav>
+
+
+    <!-- end navbar -->
+
+    <!-- banner -->
+
+    <div class="banner">
+        <h1>About Smallword Smallband</h1>
+    </div>
+
+    <!-- end banner -->
+
+    <!-- about us -->
+
+    <div class="about">
+
+        <div class="left">
+            <img src="" alt="">
+        </div>
+
+        <div class="right">
+            <h2>About Us</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Sed ac tempor quam. Aliquam erat volutpat. Donec ut efficitur neque. 
+                Nulla facilisi. Donec vel velit vel neque efficitur consectetur. Donec 
+                vel velit vel neque efficitur consectetur. Donec vel velit vel neque efficitur consectetur. 
+                Donec vel velit vel neque efficitur consectetur. Donec vel velit vel neque efficitur consectetur.
+            </p>
+        </div>
+    </div>
+
+    <!-- end about us -->
+
+    <!-- album -->
+
+    <div class="album">
+
+        <div class="album-left">
+            <img src="" alt="">
+        </div>
+
+        <div class="album-right">
+            <div class="audo">
+                <p>good time</p>
+                <audio src=""></audio>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
