--- a/index.html
+++ b/index.html
@@ -6,29 +6,30 @@
     <title>Home</title>
     <link rel="stylesheet" href="css/home.css">
 </head>
+
 <body>
     <nav>
         <div class="nav-logo">
             <img src="images/image.png" alt="">
         </div>
         <ul>
-            <li class="home"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Service</a></li>
+            <li class="home"><a href="index.html">Home</a></li>
+            <li><a href="pages/about.html">About</a></li>
+            <li><a href="pages/service.html">Service</a></li>
             <li class="nav-item dropdown">
                 <a href="#">Pages</a>
                 <ul class="dropdown-content">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Song</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pages/about.html">About</a></li>
+                    <li><a href="pages/song.html">Song</a></li>
+                    <li><a href="pages/service.html">Service</a></li>
+                    <li><a href="pages/contact.html">Contact</a></li>
                 </ul>
             </li>
         </ul>
         <div class="button">
             <button class="btn btn1 "><a href="#">Login</a></button>
-            <button class="btn btn4"><a href="#">Contact</a></button>
+            <button class="btn btn4"><a href="pages/contact.html">Contact</a></button>
         </div>
     </nav>
     <div class="bg-banner">
@@ -41,4 +42,5 @@
     <div class="container">
     </div>
 </body>
+
 </html>
