Your message about the changes

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../pages/about.html">
+    <link rel="stylesheet" href="../css/home.css">
 </head>
 <body>
 
@@ -12,7 +13,7 @@
    
     <nav>
         <div class="nav-logo">
-            <img src="images/image.png" alt="">
+            <img src="../   images/image.png" alt="">
         </div>
         <ul>
             <li class="home"><a href="#">Home</a></li>
@@ -80,6 +81,20 @@
             <div class="audo">
                 <p>good time</p>
                 <audio src=""></audio>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- our team -->
+
+    <div class="about-team">
+        <div class="card">
+            <h4>Mom Moninath</h4>
+            <div class="img">
+
+                <img src="">
+
             </div>
         </div>
     </div>
